About-skills svg lines working, with minor issues
Those minor issues are mostly clean markup and the annoying
fact that the elements seem to believe they're stacked about
10px higher up. I wonder if it's an issue with the lines being
drawn while the box is offscreen.

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -293,6 +293,7 @@ body{
 }
 .about-skills-bubble{
 	width: 90%;
+	position: relative;
 
 	// child flex properties
 	flex: 1 0 auto;
@@ -304,12 +305,18 @@ body{
 
 }
 
-#about-skills-svg{
+.about-skills-svg{
 	position: absolute;
-	top:0;
-	left:0;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+
 }
 .about-skills-line{
+	position: absolute;
+	top: 0;
+	left: 0;
 	z-index: 99;
 }
 
@@ -339,13 +346,12 @@ body{
 .about-skills-item, .about-tech-item {
 	display: block;
 	width: auto;
-	margin-top: 5px;
 	border-radius: 5px;
 
 }
 .about-skills-item{
 	background-color: $col-about-accent-light;
-	margin-top: 10px;
+	margin: 5px 0;
 	padding: 2% 4%;
 }
 .about-tech-item{
